sharedata/frontend/myingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esingressresource
spec:
  rules:
    # ibmcloud ks cluster-get --cluster ai-a-thon | grep Ingress
    - host: es.ai-a-thon.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: 9200
